More updates to allow update of KELA orders

--- a/Web.config
+++ b/Web.config
@@ -20,9 +20,9 @@
 		<add key="SUTIODBC" value="DSN=SUTI_db;Uid=Jim Welch;Pwd=3DoorsDown"/>
 		<add key="MadsODBC" value="ODBC;DATABASE=mads_se;UID=jwelch;PWD=nav1acad;DSN=Mads"/>
 		<add key="PIServer1" value="172.16.1.65"/>
-		<add key="PIServer" value="172.16.1.69"/>
+		<add key="PIServer" value="172.16.1.70"/>
 		<add key="PIPort" value="3000"/>
-		<add key="TPak_dispatch" value="NO"/>
+		<add key="TPak_dispatch" value="YES"/>
 		<add key="Vehicle_Attr" value="EEEEEEEEEEEEEEEEEEEEEEEEEKEEKEEE"/>
     <add key="Driver_Attr" value= "EEEEEEEEEEEEEEEEEEEEEEEEEKEEKEEE"/>                                                                                                                                                                                                                                                                                                    
 		<add key="CallType" value="KE"/>
